<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:autoText="false"
        android:layout_marginBottom="@dimen/title_margin_bottom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/buttonMediaStreamer"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@color/action_button_color"
        android:layout_margin="@dimen/button_margin"
        android:padding="@dimen/button_padding"
        android:width="@dimen/button_width"
        android:onClick="sendMessageOne" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/buttonSuperDuo"
        android:layout_below="@+id/buttonMediaStreamer"
        android:layout_centerHorizontal="true"
        android:background="@color/action_button_color"
        android:layout_margin="@dimen/button_margin"
        android:padding="@dimen/button_padding"
        android:width="@dimen/button_width"
        android:onClick="sendMessageOne" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/buttonSuperDuo2"
        android:layout_below="@+id/buttonSuperDuo"
        android:layout_centerHorizontal="true"
        android:background="@color/action_button_color"
        android:layout_margin="@dimen/button_margin"
        android:padding="@dimen/button_padding"
        android:width="@dimen/button_width"
        android:onClick="sendMessageOne" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/buttonTerminator"
        android:layout_below="@+id/buttonSuperDuo2"
        android:layout_centerHorizontal="true"
        android:background="@color/action_button_color"
        android:layout_margin="@dimen/button_margin"
        android:padding="@dimen/button_padding"
        android:width="@dimen/button_width"
        android:onClick="sendMessageOne" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/buttonReader"
        android:layout_below="@+id/buttonTerminator"
        android:layout_centerHorizontal="true"
        android:background="@color/action_button_color"
        android:layout_margin="@dimen/button_margin"
        android:padding="@dimen/button_padding"
        android:width="@dimen/button_width"
        android:onClick="sendMessageOne" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/buttonFinal"
        android:layout_below="@+id/buttonReader"
        android:layout_centerHorizontal="true"
        android:background="@color/final_button_color"
        android:layout_margin="@dimen/button_margin"
        android:padding="@dimen/button_padding"
        android:width="@dimen/button_width"
        android:onClick="sendMessageOne" />

</RelativeLayout>
</ScrollView>
